[package]
name = "GMS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.1"
serde = { version = "1.0.202", features = ["derive"] }
subprocess = "0.2.9"
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0.117"
