[package]
name = "CNC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
serde = { version = "1.0.202", features = ["derive"] }
subprocess = "0.2.9"
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0.117"
shell-escape = "0.1.5"
tokio-cron-scheduler = "0.10.2"
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
clap = { version = "4.5.7", features = ["derive"] }
gethostname = "0.4.3"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
leon = "3.0.1"
tempfile = "3.10.1"
flate2 = "1.0.30"
tar = "0.4.41"
axum = "0.7.5"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
